# image-inpaint

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  run-example.ps1  start.cmd  start.ps1
.github/workflows/: desktop-package.yml  desktop-real-runtime.yml
docs/: ACCEPTANCE_MATRIX.md  DEVELOPMENT.md  MACOS.md  MANUAL_USER_SMOKE.md  RELEASE_CHECKLIST.md  RELEASE_EVIDENCE_TEMPLATE.md  TROUBLESHOOTING.md  USER_GUIDE.md  WINDOWS.md
examples/: config.yaml  document.md
packaging/: build-macos.sh  build-windows.ps1  make-fake-iopaint-runtime.ps1  make-fake-iopaint-runtime.sh  prepare-iopaint-runtime-macos.sh  prepare-iopaint-runtime-windows.ps1  pyinstaller-image-inpaint.spec  sign-notarize-macos.sh  verify-checksum.py  verify-macos-dmg-smoke.sh  verify-macos-install-smoke.sh  verify-packaged-process-smoke.ps1  verify-packaged-process-smoke.sh  verify-release-macos.sh  verify-release-windows.ps1  verify-repository-boundaries.py  verify-windows-install-smoke.ps1  verify-windows-installer-smoke.ps1  verify-windows-zip-smoke.ps1
packaging/windows/: ImageInpaint.iss  Install Image Inpaint.cmd  README-FIRST.txt  Uninstall Image Inpaint.cmd  install-user.ps1  uninstall-user.ps1
src/md_image_inpaint/: __init__.py  cli.py  config.py  desktop.py  desktop_app.py  engine.py  gui.py  markdown.py  masks.py  models.py  runner.py
tests/: test_checksum.py  test_cli.py  test_desktop.py  test_gui_smoke.py  test_markdown.py  test_masks.py  test_repository_boundaries.py  test_runner.py
