[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-inpaint"
version = "0.1.0"
description = "Batch inpaint authorized local images referenced by documents, starting with Markdown."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "image-inpaint contributors" }]
dependencies = [
    "Pillow>=9.5,<13",
    "PyYAML>=6.0",
]
keywords = ["markdown", "image", "inpainting", "iopaint", "lama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Text Processing :: Markup :: Markdown",
]

[project.optional-dependencies]
iopaint = ["iopaint>=1.5.0"]
dev = ["pytest>=8.0"]

[project.scripts]
image-inpaint = "md_image_inpaint.cli:main"
md-image-inpaint = "md_image_inpaint.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
